add hidden class when no response

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </section>
 
       <section class="weather-info">
-        <div class="current-weather">
+        <div class="current-weather hidden">
           <h2 id="city-name"></h2>
           <p id="weather-description"></p>
           <p id="temperature"></p>
@@ -26,7 +26,7 @@
           <p id="humidity"></p>
           <p id="wind-speed"></p>
         </div>
-        <div class="forecast">
+        <div class="forecast hidden">
           <h2>Forecast</h2>
           <div class="forecast-days"></div>
         </div>
