add style for current weather

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       <section class="weather-info">
         <div class="current-weather hidden">
           <h2 id="city-name"></h2>
-          <p id="weather-description"></p>
-          <p id="temperature"></p>
-          <p id="feels-like"></p>
-          <p id="humidity"></p>
-          <p id="wind-speed"></p>
+          <div class="weather-content">
+            <p id="weather-description"></p>
+            <p id="temperature"></p>
+            <p id="feels-like"></p>
+            <p id="humidity"></p>
+            <p id="wind-speed"></p>
+          </div>
         </div>
         <div class="forecast hidden">
           <h2>Forecast</h2>
