--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1>Weather App</h1>
-    </header>
-
     <main>
-      <section class="search-container">
-        <input type="text" id="location-input" placeholder="Enter a location" />
-        <button id="search-btn">Search</button>
-      </section>
+      <header>
+        <h1>Weatherfinder</h1>
+        <section class="search-container">
+          <input
+            type="text"
+            id="location-input"
+            placeholder="Enter a location"
+          />
+          <button id="search-btn">Search</button>
+        </section>
+      </header>
 
       <section class="weather-info">
         <div class="current-weather hidden">
