add get location button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             id="location-input"
             placeholder="Enter a location"
           />
-          <button id="search-btn">Search</button>
+          <button class="btn" id="search-btn">Search</button>
+          <button class="btn" id="get-location-btn">Get Location</button>
         </section>
       </header>
 
