add loading spinner

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           <button class="btn" id="search-btn">Search</button>
           <button class="btn" id="get-location-btn">Get Location</button>
         </section>
+        <div class="loading-spinner hidden">
+          <div class="spinner"></div>
+          <p>Loading...</p>
+        </div>
       </header>
 
       <section class="weather-info">
