--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
             id="location-input"
             placeholder="Enter a location"
           />
+        </section>
+        <div class="buttons">
           <button class="btn" id="search-btn">Search</button>
           <button class="btn" id="get-location-btn">Get Location</button>
-        </section>
-        <div class="loading-spinner hidden">
-          <div class="spinner"></div>
-          <p>Loading...</p>
         </div>
       </header>
 
@@ -48,5 +46,9 @@
     </footer>
 
     <script src="script.js"></script>
+    <div class="loading-spinner hidden">
+      <div class="spinner"></div>
+      <p>Loading...</p>
+    </div>
   </body>
 </html>
